Fixed the blue shadow image to render behind the mattress image

--- a/src/Components/WelcomeArea/WelcomeArea.css
+++ b/src/Components/WelcomeArea/WelcomeArea.css
@@ -46,7 +46,7 @@ body {
 .mattress-shadow {
   position: absolute;
   width: 595px;
-  height: 628px;
+  height: 599px;
   left: 789px;
   top: 153px;
   background: #00B3E2;
